# SmartChoice_AI

./: Dockerfile  README.md
src/: README.md  gunicorn.conf.py  requirements.txt  setup.cfg  streamlit_app.py  streamlit_app.py.py
src/app/: __init__.py  config copy.py
src/app/blueprints/chat/: __init__.py  routes.py
src/app/blueprints/decisions/: __init__.py  routes.py
src/app/blueprints/history/: __init__.py  routes.py
src/app/blueprints/main/: routes.py
src/app/blueprints/reports/: __init__.py  routes.py
src/app/core/: agent_instructions.py  decision_engine.py  watsonx_client.py
src/app/models/: __init__.py  models.py
src/app/static/css/: main.css
src/app/static/js/: chat.js  dashboard.js  history.js  main.js
src/app/templates/: base.html  dashboard.html  history.html  index.html
src/data/templates/: decision_templates.json
