[metadata]
name = smartchoice-ai
version = 2.0.0
description = AI-powered multi-domain Decision Intelligence Platform
long_description = file: README.md
author = SmartChoice AI Team
license = MIT
python_requires = >=3.10

[options]
packages = find:
install_requires =
    Flask>=3.0.3
    Flask-SQLAlchemy>=3.1.1
    Flask-Limiter>=3.8.0
    python-dotenv>=1.0.1
    ibm-watsonx-ai>=1.1.2
    reportlab>=4.2.5
    bleach>=6.1.0
    gunicorn>=23.0.0

[flake8]
max-line-length = 110
exclude = venv, .venv, __pycache__, instance, logs
